# scikit-posthocs

./: .gitignore  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION.rst  LICENSE  MANIFEST.in  Post-hocs examples.ipynb  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  usage-examples.ipynb
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: package-publish.yml  package-pull.yml  package-test.yml  test.yml
docs/: conf.py  genindex.html  index.html  index.rst  installation.html  installation.rst  intro.html  objects.inv  outliers_api.html  plotting_api.html  posthocs_api.html  requirements.txt  search.html  searchindex.js
docs-src/source/: conf.py  index.rst  installation.rst
docs/_sources/: outliers_api.rst.txt  plotting_api.rst.txt
docs/_static/: documentation_options.js
docs/doctrees/: environment.pickle  index.doctree  installation.doctree  intro.doctree  outliers_api.doctree  plotting_api.doctree  posthocs_api.doctree
docs/html/: .buildinfo  index.html  installation.html  intro.html  outliers_api.html  plotting_api.html  posthocs_api.html
docs/source/: conf.py  examples.rst  global_api.rst  index.rst  installation.rst  intro.rst  omnibus_api.rst  outliers_api.rst  plotting_api.rst  posthocs_api.rst  tutorial.rst
docs/source/_build/html/: .buildinfo  genindex.html  index.html  installation.html  intro.html  objects.inv  outliers_api.html  plotting_api.html  posthocs_api.html  search.html  searchindex.js  tutorial.html
docs/source/_build/html/.doctrees/: environment.pickle  index.doctree  installation.doctree  intro.doctree  outliers_api.doctree  plotting_api.doctree  posthocs_api.doctree  tutorial.doctree
docs/source/_build/html/_sources/: intro.rst.txt  posthocs_api.rst.txt
images/: flowchart.gv  plot-conover.base64
paper/: codemeta.json  paper.bib  paper.md
posthocs/: __init__.py  _helpers.py  _outliers.py  _plotting.py  _posthocs.py  _posthocs_kruskal.py  posthocs.kruskal.py
scikit-posthocs/: _posthocs.py
scikit_posthocs/: __init__.py  _global.py  _grouping.py  _omnibox.py  _omnibus.py  _outliers.py  _plotting.py  _posthocs.py
tests/: __init__.py  test_posthocs.py  tests_posthocs.py
