[metadata]
description_file = DESCRIPTION.rst
name = scikit-posthocs
version = attr: scikit_posthocs.__version__
description = Statistical post-hoc analysis and outlier detection algorithms
long_description = file: README.rst, LICENSE
keywords = statistics, stats, posthoc, anova
license = MIT
author = Maksim Terpilowski,
author_email = maximtrp@gmail.com,
url = http://github.com/maximtrp/scikit-posthocs,
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
install_requires =
    numpy
    scipy
    statsmodels
    pandas>=0.20.0
    seaborn
    matplotlib

[options.package_data]
* = *.rst